--- a/.classpath
+++ b/.classpath
@@ -1,9 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src/main/scala"/>
-	<classpathentry excluding="**" kind="src" output="war/WEB-INF/classes" path="src/main/resources"/>
-	<classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="con" path="org.maven.ide.eclipse.MAVEN2_CLASSPATH_CONTAINER"/>
-	<classpathentry kind="output" path="war/WEB-INF/classes"/>
+	<classpathentry excluding="**" kind="src"
+		output="war/WEB-INF/classes" path="src/main/resources" />
+	<classpathentry kind="src" path="src/main/scala" />
+	<classpathentry kind="con"
+		path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6" />
+	<classpathentry kind="con"
+		path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency"
+				value="/WEB-INF/lib" />
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con"
+		path="org.scala-ide.sdt.launching.SCALA_CONTAINER" />
+	<classpathentry kind="src" output="war/WEB-INF/classes"
+		path=".apt_generated">
+		<attributes>
+			<attribute name="optional" value="true" />
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="output" path="war/WEB-INF/classes" />
 </classpath>
