--- a/.settings/org.scala-ide.sdt.core.prefs
+++ b/.settings/org.scala-ide.sdt.core.prefs
@@ -1,4 +1,4 @@
-#Tue Jun 14 22:22:17 JST 2011
+P=
 Xcheck-null=false
 Xcheckinit=false
 Xdisable-assertions=false
@@ -9,6 +9,9 @@ Xfuture=false
 Xlog-implicits=false
 Xmigration=false
 Xno-uescape=false
+Xplugin=
+Xplugin-disable=
+Xplugin-require=
 Xpluginsdir=misc/scala-devel/plugins
 Ybuild-manager-debug=false
 Yclosure-elim=false
@@ -19,14 +22,20 @@ Yno-generic-signatures=false
 Yno-imports=false
 Ypresentation-debug=false
 Ypresentation-delay=0
+Ypresentation-log=
+Ypresentation-replay=
 Ypresentation-verbose=false
 Yrecursion=0
 Yself-in-annots=false
 Ystruct-dispatch=poly-cache
 Ywarn-dead-code=false
+apiDiff=false
 buildmanager=refined
+compileorder=Mixed
 deprecation=false
 eclipse.preferences.version=1
+explaintypes=false
+feature=false
 formatter.alignParameters=false
 formatter.alignSingleLineCaseStatements=false
 formatter.alignSingleLineCaseStatements.maxArrowIndent=40
@@ -46,9 +55,16 @@ formatter.spaceInsideBrackets=false
 formatter.spaceInsideParentheses=false
 formatter.spacesWithinPatternBinders=true
 g=vars
+nameHashing=false
 no-specialization=false
+nowarn=false
 optimise=false
-scala.compiler.useProjectSettings=false
+recompileOnMacroDef=true
+relationsDebug=false
+scala.compiler.additionalParams=
+scala.compiler.installation=2.10
+scala.compiler.useProjectSettings=true
+stopBuildOnError=true
 syntaxColouring.bracket.bold=false
 syntaxColouring.bracket.colour=0,0,0
 syntaxColouring.bracket.italic=false
@@ -119,6 +135,7 @@ syntaxColouring.xml.tagName.colour=63,127,127
 syntaxColouring.xml.tagName.italic=false
 syntaxColouring.xml.tagName.strikethrough=false
 syntaxColouring.xml.tagName.underline=false
-target=jvm-1.5
+target=jvm-1.7
 unchecked=false
 verbose=false
+withVersionClasspathValidator=true
