--- a/.classpath
+++ b/.classpath
@@ -1,24 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry excluding="**" kind="src"
-		output="war/WEB-INF/classes" path="src/main/resources" />
-	<classpathentry kind="src" path="src/main/scala" />
-	<classpathentry kind="con"
-		path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6" />
-	<classpathentry kind="con"
-		path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
+	<classpathentry excluding="**" kind="src" output="war/WEB-INF/classes" path="src/main/resources"/>
+	<classpathentry kind="src" path="src/main/scala"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
+	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
 		<attributes>
-			<attribute name="org.eclipse.jst.component.dependency"
-				value="/WEB-INF/lib" />
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con"
-		path="org.scala-ide.sdt.launching.SCALA_CONTAINER" />
-	<classpathentry kind="src" output="war/WEB-INF/classes"
-		path=".apt_generated">
-		<attributes>
-			<attribute name="optional" value="true" />
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="output" path="war/WEB-INF/classes" />
+	<classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"/>
+	<classpathentry kind="var" path="M2_REPO/net/debasishg/sjson_2.10/0.19/sjson_2.10-0.19.jar"/>
+	<classpathentry kind="var" path="M2_REPO/net/databinder/dispatch-json_2.10/0.8.9/dispatch-json_2.10-0.8.9.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/slim3/slim3/1.0.16/slim3-1.0.16.jar"/>
+	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
