--- a/pom.xml
+++ b/pom.xml
@@ -2,15 +2,15 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.dotme</groupId>
-	<artifactId>liquidtpl</artifactId>
+	<artifactId>liquidtpl_2.10</artifactId>
 	<version>1.2.1</version>
 	<properties>
-		<slim3.version>1.0.12</slim3.version>
-		<appengine.version>1.5.1</appengine.version>
+		<slim3.version>1.0.16</slim3.version>
+		<appengine.version>1.9.17</appengine.version>
 		<generated.src>.apt_generated</generated.src>
 		<generated.war>war</generated.war>
 		<!-- Scala -->
-		<scala.version>2.9.0</scala.version>
+		<scala.version>2.10.4</scala.version>
 		<!-- Common plugin settings -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>${project.build.sourceEncoding}</project.reporting.outputEncoding>
@@ -93,18 +93,12 @@
 		</dependency>
 		<dependency>
 			<groupId>org.scala-tools.testing</groupId>
-			<artifactId>specs_2.9.0</artifactId>
-			<version>1.6.8</version>
+			<artifactId>specs_2.10</artifactId>
+			<version>1.6.9</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.appengine</groupId>
 			<artifactId>appengine-api-stubs</artifactId>
-			<version>${appengine.version}</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.google.appengine</groupId>
-			<artifactId>appengine-local-runtime</artifactId>
 			<version>${appengine.version}</version>
 			<scope>test</scope>
 		</dependency>
@@ -130,8 +124,8 @@
 		<!-- Scala -->
 		<dependency>
 			<groupId>net.debasishg</groupId>
-			<artifactId>sjson_2.9.0</artifactId>
-			<version>0.12</version>
+			<artifactId>sjson_2.10</artifactId>
+			<version>0.19</version>
 		</dependency>
 	</dependencies>
 	<build>
@@ -247,8 +241,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
 					<encoding>utf-8</encoding>
-					<source>1.6</source>
-					<target>1.6</target>
+					<source>1.7</source>
+					<target>1.7</target>
 				</configuration>
 			</plugin>
 			<plugin>
