--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,8 @@
 		<scala.version>2.10.4</scala.version>
 		<!-- Common plugin settings -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.reporting.outputEncoding>${project.build.sourceEncoding}</project.reporting.outputEncoding>
+		<project.reporting.outputEncoding>${project.build.sourceEncoding}
+		</project.reporting.outputEncoding>
 	</properties>
 	<repositories>
 		<repository>
@@ -92,11 +93,6 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.scala-tools.testing</groupId>
-			<artifactId>specs_2.10</artifactId>
-			<version>1.6.9</version>
-		</dependency>
-		<dependency>
 			<groupId>com.google.appengine</groupId>
 			<artifactId>appengine-api-stubs</artifactId>
 			<version>${appengine.version}</version>
@@ -109,7 +105,6 @@
 			<artifactId>opencsv</artifactId>
 			<version>2.1</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.apache.ant</groupId>
 			<artifactId>ant</artifactId>
@@ -123,9 +118,57 @@
 		</dependency>
 		<!-- Scala -->
 		<dependency>
+			<groupId>org.scala-lang</groupId>
+			<artifactId>scala-compiler</artifactId>
+			<version>${scala.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.scala-lang</groupId>
+			<artifactId>scala-library</artifactId>
+			<version>${scala.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.scala-lang</groupId>
+			<artifactId>scala-reflect</artifactId>
+			<version>${scala.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.scala-tools.testing</groupId>
+			<artifactId>specs_2.10</artifactId>
+			<version>1.6.9</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.scala-lang</groupId>
+					<artifactId>scala-compiler</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.scala-lang</groupId>
+					<artifactId>scala-library</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.scala-lang</groupId>
+					<artifactId>scala-reflect</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
 			<groupId>net.debasishg</groupId>
 			<artifactId>sjson_2.10</artifactId>
 			<version>0.19</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.scala-lang</groupId>
+					<artifactId>scala-compiler</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.scala-lang</groupId>
+					<artifactId>scala-library</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.scala-lang</groupId>
+					<artifactId>scala-reflect</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 	</dependencies>
 	<build>
@@ -323,7 +366,8 @@
 					<charset>${project.build.sourceEncoding}</charset>
 					<jvmArgs>
 						<jvmArg>-Xmx1024m</jvmArg>
-						<jvmArg>-DpackageLinkDefs=file://${project.build.directory}/packageLinkDefs.properties</jvmArg>
+						<jvmArg>-DpackageLinkDefs=file://${project.build.directory}/packageLinkDefs.properties
+						</jvmArg>
 					</jvmArgs>
 				</configuration>
 				<executions>
